clang/test/BSC/Negative/Ownership/Borrow/borrow_implicit_cast_to_raw/borrow_implicit_cast_to_raw.cbs
// RUN: %clang_cc1 -verify %s

void *malloc(unsigned long);

void log_print(void *msg, const char *pcFormat, ...){}

#define bsc_log_print(msg, pcFormat, ...) \
  _Unsafe {log_print(msg, pcFormat, ##__VA_ARGS__);}

_Safe T* _Owned _Nullable bsc_malloc<T>(int  size) {
  _Unsafe {return __take_from_raw((T *)malloc(size));}
}

int main() {
  void * _Owned _Nullable pMsg = nullptr;
  pMsg = bsc_malloc<void>(100);
  bsc_log_print(&_Mut *pMsg, "Info: no memory!"); // expected-error {{incompatible _Borrow types, cannot cast 'void *_Borrow' to 'void *'}}
  void * a = __move_to_raw(pMsg);
  return 0;
}
